# sally

./: CMakeLists.txt
src/: CMakeLists.txt  parse_options.cpp  parse_options.h  sally.cpp
src/api/: CMakeLists.txt  sally_api.cpp  sally_api.h
src/command/: CMakeLists.txt  command.h  frame_lemma.cpp  frame_lemma.h  induction_lemma.cpp  induction_lemma.h
src/engine/: engine.h
src/engine/pdkind/: induction_obligation.cpp  pdkind_engine.cpp  pdkind_engine.h  reachability.cpp  reachability.h  solvers.cpp  solvers.h
src/expr/: rational.h  term_manager.cpp
src/parser/: CMakeLists.txt  antlr_parser.h  parser.cpp  parser.h
src/parser/aiger/: aiger.cpp
src/parser/btor/: btor_state.cpp
src/parser/chc/: chc.cpp  chc.g  chc.h  chc_system.cpp  chc_system.h
src/parser/mcmt/: mcmt.cpp  mcmt.g  mcmt.h
src/smt/: CMakeLists.txt  solvers_list.h
src/smt/mathsat5/: mathsat5.cpp  mathsat5_info.h
src/smt/o2o2/: o2o2.cpp  o2o2.h  o2o2_info.h
src/smt/opensmt2/: opensmt2.cpp  opensmt2.h  opensmt2_info.h  opensmt2_internal.cpp  opensmt2_internal.h  opensmt2_nonitp.cpp  opensmt2_nonitp.h  opensmt2_nonitp_info.h
src/system/: transition_system.cpp  transition_system.h
test/unit/smt/: CMakeLists.txt  opensmt2_test.cpp
